[package]
name = "aes-gem"
version = "0.1.0"
description = """
Pure Rust implementation of AES-GEM (Galois Extended Mode)
Authenticated Encryption with Associated Data (AEAD) Cipher
with optional architecture-specific hardware acceleration
"""
authors = ["Trail of Bits", "RustCrypto Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["aead", "aes", "encryption", "nonce-extension"]
categories = ["cryptography", "no-std"]

[dependencies]
aead = { version = "=0.6.0-pre.0", default-features = false }
aes = { version = "=0.9.0-pre", optional = true }
cipher = "=0.5.0-pre.4"
ctr = "=0.10.0-pre"
ghash = { version = "=0.6.0-pre.0", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
hex-literal = "0.4"

[features]
default   = ["aes", "alloc", "getrandom"]
std       = ["aead/std", "cipher/std", "alloc"]
alloc     = ["aead/alloc"]
arrayvec  = ["aead/arrayvec"]
getrandom = ["aead/getrandom", "rand_core"]
heapless  = ["aead/heapless"]
rand_core = ["aead/rand_core"]
stream    = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

